# biostar

./: .gitignore  LICENSE.txt  Makefile  README.md  example.env  pyproject.toml
biostar/: app.py  layout.py  wsgi.py
biostar/body/: left.py  popup.py  right.py
biostar/callbacks/: __init__.py  configure.py  delete.py  diffs.py  display.py  import_export.py  record.py  results.py
biostar/data/: hierarchy_default.xlsx  metadata_default.json  semantic_map_default.json
biostar/modules/: data.py  display.py  parsing.py  update.py
biostar/static/biostar/css/: override.css
biostar/static/biostar/templates/: template_ppel.xlsx  template_pps.xlsx
docs/: fit_efficiency_beta.md
scripts/: fit_efficiency_beta.py  process_posterior_excel.py
